--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ axum = "0.7.7"
 tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
 chrono = "0.4.38"
 nix = { version = "0.29.0", features = ["process", "signal"] }
+goblin = "0.9.2"
+proc-maps = "0.4.0"
